# ReloopxWave

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  ISTRUZIONI.md  README.md  TEST.md  TESTS.md  capitolato-tecnico.md  reloop-ai-architettura.md
backend/: README.md  alembic.ini  pyproject.toml
backend/libs/ai_core/: pyproject.toml
backend/libs/ai_core/src/ai_core/: __init__.py  ab_stats.py  automations.py  conversation_service.py  corrections.py  delivery.py  escalation_predictor.py  ft_routing.py  llm.py  objection_trends.py  objections.py  orchestrator.py  playground.py  playground_sim.py  predictive_scoring.py  prompt_manager.py  router.py  scheduling.py  scoring.py  sentiment.py  state_machine.py
backend/libs/ai_core/src/ai_core/actions/: __init__.py  appointment_change.py  appointment_ops.py  booking.py  escalate.py  pipeline.py  read_tools.py  scoring.py
backend/libs/ai_core/src/ai_core/bandit/: thompson.py
backend/libs/ai_core/src/ai_core/ft/: __init__.py  anonymizer.py  presidio.py
backend/libs/ai_core/src/ai_core/quality/: coherence.py  compressor.py
backend/libs/ai_core/src/ai_core/rag/: __init__.py  chunker.py  indexer.py  retriever.py
backend/libs/config_resolver/: pyproject.toml
backend/libs/config_resolver/src/config_resolver/: __init__.py  presets.py  resolver.py  schema.py
backend/libs/db/: pyproject.toml
backend/libs/db/src/db/: __init__.py  session.py
backend/libs/db/src/db/migrations/: env.py  script.py.mako
backend/libs/db/src/db/migrations/versions/: 0001_initial.py  0002_auth_jwt_hook.py  0003_storage_buckets.py  0004_advisor_fixes.py  0005_super_admin_support.py  0006_drop_super_admin.py  0007_jwt_hook_user_role.py  0008_realtime_publish_messages.py  0009_messages_status_ticks.py  0010_lock_search_paths.py  0011_auto_reply.py  0012_conversation_internal_note.py  0013_realtime_publish_analytics.py  0014_whatsapp_templates_flows.py  0015_ghl_marketplace.py  0016_catalog_policies_faq.py  0017_ab_experiment_winner.py  0018_appointments.py  0019_analytics_merchant_rls.py  0020_lead_campaign.py  0021_leads_opted_out.py  0022_kb_doc_status_detail.py  0023_objection_bot_variant.py  (+21 more)
backend/libs/db/src/db/models/: __init__.py  ab.py  analytics.py  appointment.py  automation.py  base.py  bot.py  catalog.py  conversation.py  flow.py  ft.py  ghl.py  integration.py  kb.py  lead.py  services.py  tenant.py  whatsapp_template.py
backend/libs/db/src/db/repositories/: __init__.py  ab.py  analytics.py  appointment.py  automation.py  catalog.py  conversation.py  flow.py  ghl_marketplace.py  ghl_sync.py  integration.py  kb.py  lead.py  message.py  objection.py  prompt.py  services.py  template.py  tenant.py  whatsapp_template.py
backend/libs/integrations/: pyproject.toml
backend/libs/integrations/src/integrations/: __init__.py  impersonation.py  supabase_admin.py  supabase_storage.py
backend/libs/integrations/src/integrations/ghl/: __init__.py  calendar_sync.py  client.py  marketplace_signatures.py  oauth.py  signatures.py
backend/libs/integrations/src/integrations/router/: __init__.py  client.py  signatures.py
backend/libs/integrations/src/integrations/whatsapp/: __init__.py  client.py  d360_client.py  d360_templates.py  factory.py  partner_client.py  ratelimit.py  templates.py  webhook.py
backend/libs/shared/: pyproject.toml
backend/libs/shared/src/shared/: __init__.py  constants.py  crypto.py  errors.py  logging.py  observability.py  settings.py
backend/scripts/: seed_amalia.py
backend/services/api/: pyproject.toml
backend/services/api/src/api/: main.py
backend/services/api/src/api/core/: errors.py  middleware.py
backend/services/api/src/api/dependencies/: auth.py  session.py
backend/services/api/src/api/routers/: ab_test.py  analytics.py  appointments.py  auth.py  automations.py  bot_config.py  catalog.py  conversations.py  dsar.py  fine_tuning.py  flows.py  impersonation.py  integrations.py  internal.py  knowledge_base.py  merchants.py  playground.py  reports.py  services.py  tenants.py  users.py  webhooks.py  whatsapp_templates.py
backend/tests/integration/: conftest.py  test_conversation_notes.py  test_isolation.py  test_isolation_analytics.py  test_isolation_appointments.py  test_isolation_automation.py  test_isolation_catalog.py  test_isolation_generic.py  test_isolation_ghl_marketplace.py  test_isolation_messages.py  test_isolation_templates.py  test_kpi_aggregation.py
backend/tests/unit/: test_ab_stats.py  test_automation_engine_ai_reply.py  test_automation_engine_walk.py  test_automations_graph.py  test_catalog_reindex_text.py  test_config_resolver.py  test_config_schema.py  test_corrections.py  test_crypto.py  test_d360_client_helpers.py  test_d360_ratelimit.py  test_delivery_bubble_splitter.py  test_delivery_debounce.py  test_delivery_typing_delay.py  test_dsar.py  test_escalate.py  test_ft_anonymizer.py  test_ft_pipeline.py  test_ghl_client.py  test_ghl_event.py  test_ghl_install.py  test_ghl_location_name_refresh.py  test_ghl_location_token.py  test_ghl_marketplace_ed25519.py  test_ghl_marketplace_signature.py  test_ghl_oauth_state.py  test_ghl_signature.py  test_impersonation.py  test_integration_health.py  test_integrations_oauth.py  test_internal_notify.py  test_orchestrator_qualification.py  test_orchestrator_tool_loop.py  test_outbound_window.py  test_partner_client.py  test_persona_prompt.py  test_playground_sim.py  test_presidio_require.py  test_quality_guards.py  test_rag_intelligence.py  (+42 more)
backend/workers/: outbound.py  runtime.py  settings.py
backend/workers/automation/: __init__.py  engine.py  lifecycle.py
backend/workers/conversation/: handlers.py
backend/workers/fine_tuning/: collect.py  evaluate.py  export.py  handlers.py  quality.py  run.py
backend/workers/scheduler/: analytics_export.py  appointment_reminder.py  appointment_sync.py  catalog_reindex.py  close_conversations.py  ghl_hours_sync.py  handlers.py  integration_health.py  kb_reindex.py  kpi_rollup.py  no_answer.py  objections.py  reactivation.py  retention.py  send_time.py  template_sync.py
(+180 files in other folders)
