[project]
name = "reloop-ai-backend"
version = "0.1.0"
description = "Reloop AI backend (FastAPI + ARQ workers + AI core)"
requires-python = ">=3.12,<3.13"
readme = "README.md"

[tool.uv.workspace]
members = [
    "services/api",
    "libs/ai_core",
    "libs/integrations",
    "libs/db",
    "libs/config_resolver",
    "libs/shared",
]

[tool.uv.sources]
api = { workspace = true }
ai_core = { workspace = true }
integrations = { workspace = true }
db = { workspace = true }
config_resolver = { workspace = true }
shared = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "types-python-jose",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
    "services/api/src",
    "libs/ai_core/src",
    "libs/integrations/src",
    "libs/db/src",
    "libs/config_resolver/src",
    "libs/shared/src",
    "workers",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle + pyflakes
    "I",               # isort
    "N",               # pep8-naming
    "UP",              # pyupgrade
    "B",               # bugbear
    "C4",              # comprehensions
    "SIM",             # simplify
    "RUF",             # ruff-specific
    "ASYNC",           # flake8-async
    "S",               # bandit (security)
]
ignore = [
    "S101",  # assert is fine in tests
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N802"]
# Alembic migrations build DDL with f-strings (S608) by design — the table
# names are hardcoded constants in the migration file, not user input.
"**/migrations/**" = ["E", "F", "N", "S608"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = [
    "libs/db/src/db/migrations/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = ["presidio_analyzer.*", "arq.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "services/api/tests"]
pythonpath = [
    "services/api/src",
    "libs/ai_core/src",
    "libs/integrations/src",
    "libs/db/src",
    "libs/config_resolver/src",
    "libs/shared/src",
]
addopts = "-ra --strict-markers --strict-config"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
