[project]
name = "ai_core"
version = "0.1.0"
description = "AI engine — Orchestrator, ModelRouter, RAG, scoring, classifiers"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai>=1.57.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "httpx>=0.28.0",
    "tiktoken>=0.8.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.3",
    # Art. 5.2 — NER anonymization layer for FT datasets (names/locations/orgs
    # that regex can't reach). Requires a spaCy model at deploy time (see
    # ai_core/ft/presidio.py); the code degrades to regex-only if unavailable.
    "presidio-analyzer>=2.2.355",
    "shared",
    "config_resolver",
    "db",
    "integrations",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_core"]
