[project]
name = "config_resolver"
version = "0.1.0"
description = "Three-level config cascade (merchant → agency → system)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.9.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "db",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/config_resolver"]
