[project]
name = "db"
version = "0.1.0"
description = "Reloop DB layer — SQLAlchemy models, Alembic migrations, session helpers"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "shared",
    "greenlet>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db"]
