[project]
name = "integrations"
version = "0.1.0"
description = "GoHighLevel + WhatsApp Cloud API client wrappers"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
    "tenacity>=9.0.0",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/integrations"]
