[project]
name = "shared"
version = "0.1.0"
description = "Reloop shared utilities (logging, errors, types)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "structlog>=24.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "cryptography>=43.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
